--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
                 <img src="{{ url_for('static', filename='images/Logo_TrashTrack.png') }}" alt="TrashTrack" class="logo-img">
             </div>
             <nav class="nav">
-                <a href="{{ url_for('home') }}" class="nav-link">Accueil</a>
+                <a href="{{ url_for('home') }}" class="nav-link active">Accueil</a>
                 <a href="/dashboard.html" class="nav-link">Dashboard</a>
                 <a href="/apropos.html" class="nav-link">À propos</a>
                 <a href="{{ url_for('historique') }}" class="nav-link">Historique</a>
